<resources>
    <string name="app_name">SafeSmartHome</string>
    <string name="safe_smart">Safe Smart</string>
    <string name="home">Home</string>
    <string name="tagline_1">Stay In Control. Stay Connected. Stay Safe.</string>
    <string name="get_started">Get Started</string>
    <string name="login_title">Safe Smart</string>
    <string name="login_title2">Home</string>
    <string name="login_1">Welcome back!</string>
    <string name="login_2">Sign Into Manage Your Device &amp; Accessory</string>
    <string name="login_3">Welcome!</string>
    <string name="name">Welcome home, Name!</string>
    <string name="profile_name">Name</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="manage_f">Manage Fingerprint</string>
    <string name="imgcam">Camera Images</string>
    <string name="desc_fingerprint_icon">Fingerprint icon</string>
    <string name="desc_logout_icon">Logout icon</string>
    <string name="desc_profile_icon">Profile icon</string>
    <string name="light">Light</string>
    <string name="fan">Fan</string>
    <string name="logout">Logout</string>
    <string name="fire">Fire</string>
    <string name="smoke">Smoke</string>
    <string name="gas">Gas</string>
    <string name="value">Value</string>
    <string name="living">Living Room</string>
    <string name="dining">Dining</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="warning">Warning</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_3">Already have an account?</string>
    <string name="register_2">Don\'t have an account?</string>
    <string name="register">Register</string>

</resources>