<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_top"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="6dp"
            android:text="@string/login_title"
            android:layout_marginTop="130dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="55sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="6dp"
            android:layout_marginTop="190dp"
            android:text="@string/login_title2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="65sp"
            android:textStyle="bold"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/brown_black"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_3"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="Username"
            android:layout_gravity="center"
            android:background="@drawable/roundededge"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/roundededge"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="20dp"
            android:hint="@string/email_address"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/roundededge"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/brownish_grey"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/register"
            android:textColor="@color/brown_black"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/register_3"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>