<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/safe_smart"
        android:textColor="@color/white"
        android:layout_marginTop="60sp"
        android:textSize="55sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <View
        android:layout_width="166dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/poppins_light"
        android:layout_marginStart="20dp"
        android:text="@string/tagline_1"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/brownish_grey"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/get_started"
        android:textColorHint="@color/white"
        android:textSize="23sp" />


</LinearLayout>
